# ppois

lab1/Matrix/: .gitignore  CMakeLists.txt  Matrix.cpp  Matrix.h  run_coverage.sh  run_tests.sh
lab1/Matrix/tests/: MatrixMenu.cpp  MatrixTests.cpp
lab1/Vector/: CMakeLists.txt  Vector.cpp  Vector.h  run_coverage.sh  run_tests.sh
lab1/Vector/tests/: MenuVector.cpp  VectorTest.cpp
lab1ppois/: lab1matrix.cpp  lab1vector.cpp
lab2/: .gitignore  CMakeLists.txt  IMPLEMENTEDCLASSES.md  run_cover.sh
lab2/Enums/: Enums.cpp  Enums.h  enums.cpp  enums.h
lab2/Exception/: Exception.cpp  Exception.h  exception.cpp
lab2/Human/: Administrator.cpp  Administrator.h  Cleaner.cpp  Cleaner.h  Customer.cpp  Customer.h  Economist.cpp  Economist.h  Employee.cpp  Employee.h  Human.cpp  Human.h  Receptionist.cpp  Receptionist.h  SMM.cpp  SMM.h  Trainer.cpp  Trainer.h  administrator.cpp  administrator.h  cleaner.cpp  cleaner.h  customer.cpp  customer.h  economist.cpp  economist.h  employee.cpp  employee.h  human.cpp  human.h  receptionist.cpp  receptionist.h  smm.cpp  smm.h  trainer.cpp  trainer.h
lab2/Mirror/: Mirror.cpp  mirror.cpp  mirror.h
lab2/Reception/: ClientsBase.h  Clientsbase.cpp  KeyCase.cpp  KeyCase.h  PassKey.cpp  PassKey.h  Reception.cpp  Reception.h  Subscription.cpp  Subscription.h  clientsbase.cpp  clientsbase.h  keycase.cpp  keycase.h  passkey.cpp  passkey.h  reception.cpp  reception.h  subscription.cpp  subscription.h
lab2/Room/: Department.cpp  Department.h  DressingRoom.cpp  DressingRoom.h  Fitness.cpp  Fitness.h  Gym.cpp  Gym.h  Locker.cpp  Locker.h  Room.cpp  Room.h  Sauna.cpp  Sauna.h  Scales.cpp  Scales.h  SwimmingPool.cpp  SwimmingPool.h  WrestlingRing.cpp  WrestlingRing.h  department.cpp  department.h  dressingroom.cpp  dressingroom.h  fitness.cpp  fitness.h  gym.cpp  gym.h  locker.cpp  locker.h  room.cpp  sauna.cpp  sauna.h  scales.cpp  scales.h  swimmingpool.cpp  swimmingpool.h  wrestlingring.cpp  wrestlingring.h
lab2/SM/: Instagram.cpp  Instagram.h  SM.cpp  SM.h  TikTok.cpp  TikTok.h  instagram.cpp  instagram.h  sm.cpp  tiktok.cpp  tiktok.h
lab2/Schedule/: Schedule.cpp  Schedule.h  schedule.cpp  schedule.h
lab2/Shop/: Ball.cpp  Ball.h  Creatine.cpp  Creatine.h  Drink.cpp  Drink.h  FlipFlops.cpp  FlipFlops.h  Good.cpp  Headband.cpp  Headband.h  JumpRope.cpp  JumpRope.h  ProteinBar.cpp  ProteinBar.h  SwimmingCap.cpp  SwimmingCap.h  SwimmingGoggles.cpp  SwimmingGoggles.h  Swimwear.cpp  Swimwear.h  Towel.cpp  Towel.h  WorkoutGloves.cpp  WorkoutGloves.h  ball.cpp  ball.h  creatine.cpp  creatine.h  drink.cpp  drink.h  flipflops.cpp  flipflops.h  good.cpp  good.h  headband.cpp  headband.h  jumprope.cpp  jumprope.h  proteinbar.cpp  (+11 more)
lab2/Test/: AdministratorTest.cpp  CleanerTest.cpp  ClientsBaseTest.cpp  CreatineTest.cpp  CustomerTest.cpp  DressingRoomTest.cpp  DrinkTest.cpp  EconomistTest.cpp  EmployeeTest.cpp  EnumToStrTest.cpp  FitnessTest.cpp  FlipFlopsTest.cpp  GoodTest.cpp  GymTest.cpp  HumanTest.cpp  KeyCaseTest.cpp  ProteinBarTest.cpp  ReceptionistTest.cpp  RoomTest.cpp  SMMTest.cpp  SMTest.cpp  SaunaTest.cpp  ScalesTest.cpp  ScheduleTest.cpp  SwimmingCapTest.cpp  SwimmingGogglesTest.cpp  SwimmingPoolTest.cpp  SwimwearTest.cpp  TowelTest.cpp  WorkoutGlovesTest.cpp  WrestlingRingTest.cpp  administratortest.cpp  cleanertest.cpp  clientsbasetest.cpp  creatinetest.cpp  customertest.cpp  dressingroomtest.cpp  drinktest.cpp  economisttest.cpp  employeetest.cpp  (+21 more)
lab3/: .gitignore  CMakeLists.txt  IMPLEMENTEDCLASSES.md  run_cover.sh
lab3/FAQ/: FAQ.cpp  FAQ.h  FAQAnswer.cpp  FAQAnswer.h
lab3/account/: AccountLimit.cpp  AccountLimit.h  AccountTransaction.cpp  AccountTransaction.h  BankAccount.cpp  BankAccount.h  Credit.cpp  Credit.h  CreditAccount.cpp  CreditAccount.h  CreditPayment.cpp  CreditPayment.h  Currency.h  CurrencyConverter.cpp  CurrencyConverter.h  CurrencyExchange.h  CurrentAccount.cpp  CurrentAccount.h  Overdraft.cpp  Overdraft.h  Receipt.cpp  Receipt.h  SavingsAccount.cpp  SavingsAccount.h  Transaction.cpp  Transaction.h
lab3/banksafebox/: BankSafeBox.cpp  BankSafeBox.h
lab3/card/: ATM.cpp  ATM.h  ATMStorage.cpp  ATMStorage.h  Card.cpp  Card.h  CardNumGen.cpp  CardNumGen.h  Cashback.cpp  Cashback.h  ExpirationDate.cpp  ExpirationDate.h  InternetBanking.cpp  InternetBanking.h  InternetBankingAccount.cpp  InternetBankingAccount.h  PasswordValidator.h  PaymentSystem.h  PinGen.cpp  PinGen.h  Terminal.cpp  Terminal.h
lab3/customer/: Address.h  Contact.cpp  Contact.h  Customer.cpp  Customer.h  VerificationService.cpp  VerificationService.h
lab3/datamanager/: DataManager.h  DataManaget.cpp
lab3/exception/: Exception.cpp  Exception.h
lab3/generator/: Generator.cpp  GeneratorID.cpp  GeneratorID.h
lab3/getter/: Getter.cpp  Getter.h  TimeGetter.cpp  TimeGetter.h
lab3/money/: BanknoteValidator.cpp  BanknoteValidator.h  CalculatingMachine.cpp  CalculatingMachine.h  CurrencyExchange.cpp  CurrencyExchange.h  CurrencyRateTableau.cpp  CurrencyRateTableau.h  Money.cpp  Money.h  MoneyPrinter.cpp  MoneyPrinter.h  Nominal.h  Wallet.cpp  Wallet.h
lab3/test/: ATMTest.cpp  AccountLimitTest.cpp  BankAccountTest.cpp  BankSafeBoxTest.cpp  BanknoteValidatorTest.cpp  CalculatingMachineTest.cpp  CardTest.cpp  CashBackTest.cpp  CreditAccountTest.cpp  CreditTest.cpp  CurrencyRateTableauTest.cpp  CustomerTest.cpp  ExpirationDateTest.cpp  FAQTest.cpp  GetterTest.cpp  InternetBankingTest.cpp  MoneyPrinterTest.cpp  OverdraftTest.cpp  ReceiptTest.cpp  SavingsAccountTest.cpp  TerminalTest.cpp  WalletTest.cpp
lab4/Sort/: CMakeLists.txt  CMakeLists1.txt  CMakePresets.json  CombSort.h  CombSortTest.cpp  Human.h  TournamentSort.h
